form update, messages out

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <option>1break</option>
                     <option>Cevichero</option>
                 </select>
-                <div class="invalid-feedback">Tipo de documento</div>
+                <!-- <div class="invalid-feedback">Tipo de documento</div> -->
             </div>
             <div class="form-group was-validated">
                 <label class="form-label" for="text">Tipo de comprobante</label>
@@ -49,42 +49,42 @@
                     <option>NOTA DE DEBITO</option>
                     <option>ANULACION</option>
                 </select>
-                <div class="invalid-feedback">Tipo de documento</div>
+                <!-- <div class="invalid-feedback">Tipo de documento</div> -->
             </div>
             <div class="form-group was-validated">
                 <label class="form-label" for="text">RUC cliente</label>
                 <input class="form-control" type="text" id="ruc_receptor" required>
-                <div class="invalid-feedback">
+                <!-- <div class="invalid-feedback">
                     Ruc del cliente
-                </div>
+                </div> -->
             </div>
             <div class="form-group was-validated">
                 <label class="form-label" for="text">Serie</label>
                 <input class="form-control" type="text" id="serie" required>
-                <div class="invalid-feedback">
+                <!-- <div class="invalid-feedback">
                     Serie alfanumerica del comprobante
-                </div>
+                </div> -->
             </div>
             <div class="form-group was-validated">
                 <label class="form-label" for="text">Numero</label>
                 <input class="form-control" type="text" id="number" required>
-                <div class="invalid-feedback">
+                <!-- <div class="invalid-feedback">
                     Numero correlativo
-                </div>
+                </div> -->
             </div>
             <div class="form-group was-validated">
                 <label class="form-label" for="float">Total</label>
                 <input class="form-control" type="float" id="tot4l" required>
-                <div class="invalid-feedback">
+                <!-- <div class="invalid-feedback">
                     Precio de venta
-                </div>
+                </div> -->
             </div>
             <div class="form-group was-validated">
                 <label class="form-label" for="date">Fecha</label>
                 <input class="form-control" type="date" id="date" required>
-                <div class="invalid-feedback">
+                <!-- <div class="invalid-feedback">
                     Fecha de emisión
-                </div>
+                </div> -->
             </div>
             <!-- <input class="btn btn-success w-100" type="submit" value="CONSULTA"> -->
         </form>
