add razon socialx3

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <label class="form-label" for="text">RUC</label>
                 <select class="form-control" type="combo" id="ruc_emisor" required>
                     <option> </option>
-                    <option>Jirón Perú</option>
+                    <option>JIRON PERU</option>
                     <option>Harina de otro costal</option>
                     <option>Maia</option>
                     <option>CompuExpress</option>
@@ -36,6 +36,9 @@
                     <option>Rbchachani</option>
                     <option>1break</option>
                     <option>Cevichero</option>
+                    <option>SurtiHogar</option>
+                    <option>Sysdein</option>
+                    <option>R&REntretenimiento</option>
                 </select>
                 <!-- <div class="invalid-feedback">Tipo de documento</div> -->
             </div>
